--- a/src/main/resources/assets/entangled/lang/zh_cn.json
+++ b/src/main/resources/assets/entangled/lang/zh_cn.json
@@ -1,11 +1,11 @@
 {
   "entangled.block.block": "纠缠方块",
   "entangled.item.item": "纠缠绑定器",
-  "entangled.entangled_block.info.ranged_same_dimension": "可以绑定到相同维度的方块上，最远 %d 个方块",
-  "entangled.entangled_block.info.infinite_same_dimension": "可以绑定到同维度的方块",
-  "entangled.entangled_block.info.ranged_other_dimension": "可以绑定到最远 %d 个方块以外的方块或其他维度的方块",
+  "entangled.entangled_block.info.ranged_same_dimension": "可以绑定到相同维度的最远 %d 个方块远的方块",
+  "entangled.entangled_block.info.infinite_same_dimension": "可以绑定到相同维度的方块",
+  "entangled.entangled_block.info.ranged_other_dimension": "可以绑定到最远 %d 个方块远的方块或其他维度的方块",
   "entangled.entangled_block.info.infinite_other_dimension": "可以绑定到其他方块",
-  "entangled.entangled_block.info.bound": "绑定到 %5$s 中的 %1$s (%2$d, %3$d, %4$d)",
+  "entangled.entangled_block.info.bound": "绑定到 %5$s 中位于（%2$d, %3$d, %4$d）的 %1$s",
   "entangled.entangled_block.unbind": "方块未绑定！",
   "entangled.entangled_block.no_selection": "没有选择方块！",
   "entangled.entangled_block.self": "无法将方块绑定到自身！",
@@ -13,12 +13,14 @@
   "entangled.entangled_block.wrong_dimension": "目标方块必须在同一维度！",
   "entangled.entangled_block.too_far": "目标方块太远了！",
   "entangled.entangled_binder.info": "可以将纠缠方块绑定到其他方块",
-  "entangled.entangled_binder.info.target.unknown": "链接到 %4$s 中的方块 (%1$d, %2$d, %3$d)",
-  "entangled.entangled_binder.info.target.known": "链接到 %5$s 中的 %1$s (%2$d, %3$d, %4$d)",
+  "entangled.entangled_binder.info.target.unknown": "链接到 %4$s 中位于（%1$d, %2$d, %3$d）的方块",
+  "entangled.entangled_binder.info.target.known": "链接到 %5$s 中位于（%2$d, %3$d, %4$d）的 %1$s",
   "entangled.entangled_binder.select": "方块已选择！",
-  "entangled.entangled_binder.clear": "连接已清除！",
-  "entangled.waila.bound_same_dimension": "绑定到 %1$s 在 (%2$d, %3$d, %4$d) ",
-  "entangled.waila.bound_other_dimension": "绑定到 %5$s 中的 %1$s (%2$d, %3$d, %4$d)",
+  "entangled.entangled_binder.clear": "链接已清除！",
+  "entangled.entangled_binder.unknown_dimension": "链接绑定到未知维度“%s”！",
+  "entangled.waila.bound_same_dimension": "绑定到位于（%2$d, %3$d, %4$d）的 %1$s",
+  "entangled.waila.bound_other_dimension": "绑定到 %5$s 中位于（%2$d, %3$d, %4$d）的 %1$s",
   "entangled.waila.unbound": "未绑定",
+  "entangled.waila.invalid_block": "无效方块“%s”！",
   "config.jade.plugin_entangled.entangled_block_component": "纠缠方块"
 }
